--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
+# Since the ".env" file is gitignored, you can use the ".env.dist" file to
 # build a new ".env" file when you clone the repo. Keep this file up-to-date
 # when you add new variables to `.env`.
 
@@ -12,5 +12,6 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
+
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET=password
