--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-table": "^8.17.3",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
@@ -56,12 +58,15 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.10.2",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.10.3",
     "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.33.1"
   },
-  "packageManager": "pnpm@9.1.0"
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  }
 }
