--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: file:./db.sqlite
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,10 +20,14 @@ jobs:
           version: 9
       - name: Install dependencies
         run: pnpm install
-      - name: build
+      - name: lint
         run: pnpm lint
   build:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: file:./db.sqlite
+      NEXTAUTH_URL: http://localhost:3000
+      NEXTAUTH_SECRET: "test"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -33,8 +39,10 @@ jobs:
         run: pnpm install
       - name: build
         run: pnpm build
-  validate-prisma:
+  validate-shcema:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: file:./db.sqlite
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -46,3 +54,20 @@ jobs:
         run: pnpm install
       - name: build
         run: pnpm prisma validate
+  validate-migration:
+    runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: file:./db.sqlite
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 9
+      - name: Install dependencies
+        run: pnpm install
+      - name: migrate
+        run: pnpm prisma migrate reset --force
+      - name: check migration
+        run: pnpm prisma migrate diff --from-url file:./prisma/db.sqlite --to-schema-datamodel prisma/schema.prisma --exit-code
