--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test:unit": "vitest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@tanstack/react-query-devtools": "^5.37.1",
+    "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
@@ -61,16 +63,20 @@
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-config-prettier": "^9.1.0",
+    "jsdom": "^24.1.1",
+    "next-router-mock": "^0.9.13",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.10.3",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "vitest": "^2.0.5"
   },
   "ct3aMetadata": {
     "initVersion": "7.33.1"
