feat: implement post and comment tables

--- a/package.json
+++ b/package.json
@@ -76,6 +76,6 @@
     "initVersion": "7.33.1"
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed/index.ts"
   }
 }
