--- a/package.json
+++ b/package.json
@@ -83,6 +83,6 @@
     "initVersion": "7.33.1"
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed/index.ts"
   }
 }
