--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "check:ci": "pnpm lint && pnpm vitest run && pnpm build && pnpm prisma validate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.19.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -73,7 +74,7 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.14.0",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.10.3",
     "typescript": "^5.4.2",
