--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lint": "next lint",
     "start": "next start",
     "test:unit": "vitest",
+    "format": "prettier ./src",
+    "format:fix": "prettier --write ./src",
     "check:ci": "pnpm lint && pnpm vitest run && pnpm build && pnpm prisma validate"
   },
   "dependencies": {
