--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "18.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.4",
+    "recharts": "^2.13.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
