--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - main
       - develop
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -18,6 +19,13 @@ jobs:
         name: Install pnpm
         with:
           version: 9
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
       - name: Install dependencies
         run: pnpm install
       - name: lint
@@ -40,10 +48,18 @@ jobs:
         name: Install pnpm
         with:
           version: 9
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
       - name: Install dependencies
         run: pnpm install
       - name: build
         run: pnpm build
+
   validate-schema:
     runs-on: ubuntu-latest
     env:
@@ -55,10 +71,18 @@ jobs:
         name: Install pnpm
         with:
           version: 9
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
       - name: Install dependencies
         run: pnpm install
       - name: build
         run: pnpm prisma validate
+
   validate-migration:
     runs-on: ubuntu-latest
     env:
@@ -70,6 +94,13 @@ jobs:
         name: Install pnpm
         with:
           version: 9
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
       - name: Install dependencies
         run: pnpm install
       - name: migrate
